# telegram_msg_sender

./: .gitignore  README.md
Tg_Bot_Api/: README.md  pyproject.toml
Tg_Bot_Api/TgBotScripts/: tg_bot_api.py  tg_bot_client.py  tg_messager.py
Tg_Bot_Api/tests/: test_tg_bot_api.py
tg_bot_api/: README.md  pyproject.toml
tg_bot_api/tests/: test_tg_bot_api.py
tg_bot_api/tg_bot_api/: tg_bot_api.py
